--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,23 @@
-body {
+/* A (ridiculously) simplified version of normalize.css */
+html, body, div {
+  border: 0;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+}
+
+/* Apply a natural box layout model to all elements, but allowing components to change */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: Arial, Verdana, Helvetica, sans-serif;
+}
+
+/* Remove the focus outline from headings */
+h1:focus, h2:focus, h3:focus {
+  outline: 0;
 }
